--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ h3,p,h4,h1,a,span,::placeholder, button,div,input{
   font-family: 'Quicksand', sans-serif;
 
 }
+
+.text-center{
+  text-align: center;
+}
