--- a/src/pages/LeftMenu/LeftMenu.module.css
+++ b/src/pages/LeftMenu/LeftMenu.module.css
@@ -7,12 +7,11 @@
 }
 
 .logo{
-    width: 25%;
-    text-align: center;
+    width: 70px;
 }
 
 .Heading{
-    width: 75%;
+    width: 80%;
 }
 img{
     max-width: 100%;
