--- a/src/pages/LeftMenu/LeftMenu.module.css
+++ b/src/pages/LeftMenu/LeftMenu.module.css
@@ -47,3 +47,22 @@ img{
     font-weight: bolder;
 }
 
+
+.ActiveChat{
+    background-color: #e1e6ee;
+    color: #1b223c;
+    border-radius: 10px;
+    padding: 10px;
+    
+    display: flex;
+    align-items: center;
+}
+.notActiveChat{
+    border-radius: 10px;
+    padding: 10px;
+    
+
+    display: flex;
+    align-items: center;
+    
+}
